clusters/labinfra/apps/argocd.xuperson.org/argocd-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/component: gitops
